[package]
name = "litra-control"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.4.2"
anyhow = "1.0.65"
clap = { version = "4.0.13", features = ["derive"] }
config = "0.13.2"
serde = { version = "1.0.145", features = ["derive"] }
